# 51045Raytracer

./: CMakeLists.txt  README.md
cl_src/: gpu.c  gpu.cl  random.cl
include/: IndentStream.h  camera.h  factory.h  geometries.h  graphics.h  hit.h  image.h  materials.h  mesh.h  opencl_struct.h  random.h  ray.h  scene.h  vector3.h  visitor.h
include/CL/: opencl.hpp
include/SDL3/: SDL_revision.h
include/glad/: glad.h
include/variadics/: my_type_traits.h  variadic_examples.h
src/: glad.c  main.cpp  opencl.cpp
